--- a/test_task/public/index.html
+++ b/test_task/public/index.html
@@ -11,10 +11,11 @@
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://use.fontawesome.com/052c2023e7.js"></script>
+    <script src="index_bundle.js"></script>
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="Root"></div>
   </body>
 </html>
